--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta charset="UTF-8">
+    <!-- default-src 'self': Only allow content from the same origin (no external scripts). -->
+    <!-- img-src 'self' data:: Allow local images and data: URLs for inline images. -->
+    <!-- script-src 'self': Only allow scripts from the same origin. -->
+
+    <meta 
+        http-equiv="Content-Security-Policy"
+        content=" img-src 'self' data:; script-src 'self'; style-src 'self' 'unsafe-inline';">
+    <title>Property Search</title>
   </head>
   <body>
     <div id="root"></div>
